<resources>
    <string name="app_name">Calculator</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="del">DEL</string>
    <string name="allclear">AC</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="num0">0</string>
    <string name="posorneg">+/-</string>
    <string name="decimalpoint">.</string>
    <string name="equal">=</string>
</resources>
