<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaswanth.calculator.MainActivity">

    <EditText
        android:id="@+id/numberresult"
        android:layout_width="395dp"
        android:layout_height="123dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:hint="0."
        android:textAlignment="textEnd"
        android:textSize="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/allclear"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:text="@string/allclear"
        android:layout_below="@id/numberresult"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/numberresult" />

    <Button
        android:id="@+id/delete"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:text="@string/del"
        android:layout_below="@id/numberresult"
        android:layout_above="@id/multiply"
        app:layout_constraintRight_toLeftOf="@+id/allclear"
        android:layout_marginRight="10dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/numberresult" />

    <Button
        android:id="@+id/number9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num9"
        android:layout_below="@id/numberresult"
        android:layout_alignParentRight="true"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/numberresult"
        app:layout_constraintRight_toLeftOf="@+id/delete"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num8"
        android:layout_below="@id/numberresult"
        android:layout_alignParentRight="true"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/numberresult"
        app:layout_constraintRight_toLeftOf="@+id/number9"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="7"
        android:text="@string/num7"
        tools:text="7"
        android:layout_below="@id/numberresult"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/numberresult"
        app:layout_constraintRight_toLeftOf="@+id/number8"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num6"
        android:layout_below="@id/number9"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number9"
        app:layout_constraintRight_toLeftOf="@+id/multiply"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num5"
        android:layout_below="@id/number8"
        android:layout_alignParentRight="true"
        app:layout_constraintRight_toLeftOf="@+id/number6"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number8" />

    <Button
        android:id="@+id/number4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num4"
        android:layout_below="@id/number7"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number7"
        app:layout_constraintRight_toLeftOf="@+id/number5"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num3"
        android:layout_below="@id/number6"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number6"
        app:layout_constraintRight_toLeftOf="@+id/add"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num2"
        android:layout_below="@id/number5"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number5"
        app:layout_constraintRight_toLeftOf="@+id/number3"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/number1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num1"
        android:layout_below="@id/number4"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/number4"
        app:layout_constraintRight_toLeftOf="@+id/number2"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/posorneg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/posorneg"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_below="@id/number2"
        android:layout_alignParentRight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        app:layout_constraintVertical_bias="0.144"
        app:layout_constraintRight_toLeftOf="@+id/decimalpoint"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/decimalpoint"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="67dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:text="."
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/equal"
        app:layout_constraintTop_toBottomOf="@+id/number3"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/number0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/num0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/number1"
        app:layout_constraintVertical_bias="0.142"
        app:layout_constraintRight_toLeftOf="@+id/posorneg"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/multiply"
        android:layout_below="@id/delete"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        app:layout_constraintRight_toLeftOf="@+id/divide"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/divide"
        android:layout_below="@id/allclear"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/allclear" />

    <Button
        android:id="@+id/add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/add"
        android:layout_below="@id/multiply"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        app:layout_constraintRight_toLeftOf="@+id/sub"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/subtract"
        android:layout_below="@id/divide"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/equal"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_below="@id/sub"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="57dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.132" />

</android.support.constraint.ConstraintLayout>
